--- a/FoodHubAssignment.ipynb
+++ b/FoodHubAssignment.ipynb
@@ -2668,22 +2668,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df.groupby('group_column').head(2)"
+      ],
+      "metadata": {
+        "id": "kPbvjkKFsj8v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "_boZ_nAcoWfj"
       },
       "source": [
         "**Some preliminary insights from aggregated data**\n",
-        "- *Spanish cuisine has a high average rating with only 6 restaurants, Japaneese restaurants seem to be have a good average rating with 273 restaurants.*\n",
+        "- *Spanish cuisine has a high average rating with only 3 restaurants, Japaneese restaurants seem to be have a good average rating with 28 restaurants.*\n",
         "- *Vietnamese and Korean have low rating with lesser number of restaurants*\n",
-        "- *American cuisine has larger number of restaurants with 368 as the count and have an average rating of 4.298913. The lowest rating for American cuisine is 3 and the best rating is 5.*\n",
+        "- *American cuisine has larger number of restaurants with 38 as the count and have an average rating of 4.298913. The lowest rating for American cuisine is 3 and the best rating is 5.*, ,,,,,,,,\n",
         "- *Data with lowest standard deviation is Spanish cuisine, having said that the data availabilty should also be considered.*"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "foodHub.groupby('cuisine_type').aggregate({'restaurant_name':'count','order_id': 'count','food_preparation_time':['min','max','mean','std'],'delivery_time':['min','max','mean','std']})"
+        "foodHub.groupby('cuisine_type').aggregate({'restaurant_name':'nunique','order_id': 'count','food_preparation_time':['min','max','mean','std'],'delivery_time':['min','max','mean','std']})"
       ],
       "metadata": {
         "colab": {
@@ -2691,31 +2702,31 @@
           "height": 551
         },
         "id": "4ncnJewep-ff",
-        "outputId": "502b4738-05c3-4c9b-d956-f270994df1fa"
+        "outputId": "9d331bd1-1f9e-4966-c305-1344a8ae911f"
       },
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "               restaurant_name order_id food_preparation_time                 \\\n",
-              "                         count    count                   min max       mean   \n",
+              "                       nunique    count                   min max       mean   \n",
               "cuisine_type                                                                   \n",
-              "American                   584      584                    20  35  27.440068   \n",
-              "Chinese                    215      215                    20  35  27.511628   \n",
-              "French                      18       18                    21  35  26.888889   \n",
-              "Indian                      73       73                    20  35  27.109589   \n",
-              "Italian                    298      298                    20  35  27.483221   \n",
-              "Japanese                   470      470                    20  35  27.510638   \n",
-              "Korean                      13       13                    20  33  25.461538   \n",
-              "Mediterranean               46       46                    20  35  27.000000   \n",
-              "Mexican                     77       77                    20  35  26.727273   \n",
-              "Middle Eastern              49       49                    20  34  26.673469   \n",
-              "Southern                    17       17                    20  35  27.588235   \n",
-              "Spanish                     12       12                    20  35  26.916667   \n",
-              "Thai                        19       19                    21  35  27.315789   \n",
-              "Vietnamese                   7        7                    20  33  25.714286   \n",
+              "American                    41      584                    20  35  27.440068   \n",
+              "Chinese                     16      215                    20  35  27.511628   \n",
+              "French                       3       18                    21  35  26.888889   \n",
+              "Indian                      14       73                    20  35  27.109589   \n",
+              "Italian                     31      298                    20  35  27.483221   \n",
+              "Japanese                    29      470                    20  35  27.510638   \n",
+              "Korean                       5       13                    20  33  25.461538   \n",
+              "Mediterranean                5       46                    20  35  27.000000   \n",
+              "Mexican                     11       77                    20  35  26.727273   \n",
+              "Middle Eastern               7       49                    20  34  26.673469   \n",
+              "Southern                     2       17                    20  35  27.588235   \n",
+              "Spanish                      3       12                    20  35  26.916667   \n",
+              "Thai                         9       19                    21  35  27.315789   \n",
+              "Vietnamese                   3        7                    20  33  25.714286   \n",
               "\n",
               "                         delivery_time                           \n",
               "                     std           min max       mean       std  \n",
@@ -2738,7 +2749,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-c08c9457-06dd-421c-a88f-7fbd34ebf512\">\n",
+              "  <div id=\"df-c616da43-3815-477e-a321-0dbe4caeecd7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2769,7 +2780,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th></th>\n",
-              "      <th>count</th>\n",
+              "      <th>nunique</th>\n",
               "      <th>count</th>\n",
               "      <th>min</th>\n",
               "      <th>max</th>\n",
@@ -2797,7 +2808,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>American</th>\n",
-              "      <td>584</td>\n",
+              "      <td>41</td>\n",
               "      <td>584</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2810,7 +2821,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Chinese</th>\n",
-              "      <td>215</td>\n",
+              "      <td>16</td>\n",
               "      <td>215</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2823,7 +2834,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>French</th>\n",
-              "      <td>18</td>\n",
+              "      <td>3</td>\n",
               "      <td>18</td>\n",
               "      <td>21</td>\n",
               "      <td>35</td>\n",
@@ -2836,7 +2847,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Indian</th>\n",
-              "      <td>73</td>\n",
+              "      <td>14</td>\n",
               "      <td>73</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2849,7 +2860,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Italian</th>\n",
-              "      <td>298</td>\n",
+              "      <td>31</td>\n",
               "      <td>298</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2862,7 +2873,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Japanese</th>\n",
-              "      <td>470</td>\n",
+              "      <td>29</td>\n",
               "      <td>470</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2875,7 +2886,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Korean</th>\n",
-              "      <td>13</td>\n",
+              "      <td>5</td>\n",
               "      <td>13</td>\n",
               "      <td>20</td>\n",
               "      <td>33</td>\n",
@@ -2888,7 +2899,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Mediterranean</th>\n",
-              "      <td>46</td>\n",
+              "      <td>5</td>\n",
               "      <td>46</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2901,7 +2912,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Mexican</th>\n",
-              "      <td>77</td>\n",
+              "      <td>11</td>\n",
               "      <td>77</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2914,7 +2925,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Middle Eastern</th>\n",
-              "      <td>49</td>\n",
+              "      <td>7</td>\n",
               "      <td>49</td>\n",
               "      <td>20</td>\n",
               "      <td>34</td>\n",
@@ -2927,7 +2938,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Southern</th>\n",
-              "      <td>17</td>\n",
+              "      <td>2</td>\n",
               "      <td>17</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2940,7 +2951,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Spanish</th>\n",
-              "      <td>12</td>\n",
+              "      <td>3</td>\n",
               "      <td>12</td>\n",
               "      <td>20</td>\n",
               "      <td>35</td>\n",
@@ -2953,7 +2964,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Thai</th>\n",
-              "      <td>19</td>\n",
+              "      <td>9</td>\n",
               "      <td>19</td>\n",
               "      <td>21</td>\n",
               "      <td>35</td>\n",
@@ -2966,7 +2977,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Vietnamese</th>\n",
-              "      <td>7</td>\n",
+              "      <td>3</td>\n",
               "      <td>7</td>\n",
               "      <td>20</td>\n",
               "      <td>33</td>\n",
@@ -2980,7 +2991,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c08c9457-06dd-421c-a88f-7fbd34ebf512')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c616da43-3815-477e-a321-0dbe4caeecd7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -2993,8 +3004,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-ee50736c-d35d-4d4b-b25b-2214fe356791\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ee50736c-d35d-4d4b-b25b-2214fe356791')\"\n",
+              "    <div id=\"df-cd5572d2-2033-429d-a6ce-5a50ed7075fc\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cd5572d2-2033-429d-a6ce-5a50ed7075fc')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -3051,7 +3062,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-ee50736c-d35d-4d4b-b25b-2214fe356791 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-cd5572d2-2033-429d-a6ce-5a50ed7075fc button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -3098,12 +3109,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c08c9457-06dd-421c-a88f-7fbd34ebf512 button.colab-df-convert');\n",
+              "          document.querySelector('#df-c616da43-3815-477e-a321-0dbe4caeecd7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c08c9457-06dd-421c-a88f-7fbd34ebf512');\n",
+              "          const element = document.querySelector('#df-c616da43-3815-477e-a321-0dbe4caeecd7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3125,7 +3136,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 24
         }
       ]
     },
